base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: APP_NAME
  labels:
    app: APP_NAME
spec:
  ports:
    - name: http-rest
      port: 3000
      targetPort: 3000
    - name: http
      port: 8080
      targetPort: 8080
    - name: grpc
      port: 9090
      targetPort: 9090
    - name: http-prometheus
      port: 4014
      targetPort: 4014
  selector:
    app: APP_NAME
  type: ClusterIP
