base/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: APP_NAME
spec:
  hosts:
    - $(SERVICE_NAME).$(SERVICE_NAMESPACE).svc.cluster.local
  gateways:
    - mesh
  http:
    - name: http
      match:
      - port: 80
        gateways:
          - mesh
      retries:
        attempts: 3
        perTryTimeout: "10s"
      route:
        - destination:
            host: $(SERVICE_NAME).$(SERVICE_NAMESPACE).svc.cluster.local
            port:
              number: 8080
          weight: 100
    - name: grpc
      match:
      - port: 9090
        gateways:
          - mesh
      retries:
        attempts: 2
        perTryTimeout: "30s"
      route:
        - destination:
            host: $(SERVICE_NAME).$(SERVICE_NAMESPACE).svc.cluster.local
            port:
              number: 9090
          weight: 100
